content template module added
