# swagger.json
@@ -656,6 +656,223 @@
           }
         }
       }
+    },
+    "/contenttemplate": {
+      "post": {
+        "tags": [
+          "Contenttemplate"
+        ],
+        "summary": "Create a new Contenttemplate",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ContenttemplateCreate"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Contenttemplate created successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean"
+                    },
+                    "message": {
+                      "type": "string"
+                    },
+                    "data": {
+                      "$ref": "#/components/schemas/Contenttemplate"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request"
+          }
+        }
+      },
+      "get": {
+        "tags": [
+          "Contenttemplate"
+        ],
+        "summary": "Get all Contenttemplates",
+        "responses": {
+          "200": {
+            "description": "List of Contenttemplates retrieved successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean"
+                    },
+                    "message": {
+                      "type": "string"
+                    },
+                    "data": {
+                      "type": "array",
+                      "items": {
+                        "$ref": "#/components/schemas/Contenttemplate"
+                      }
+                    }
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/contenttemplate/{id}": {
+      "get": {
+        "tags": [
+          "Contenttemplate"
+        ],
+        "summary": "Get Contenttemplate by ID",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Contenttemplate ID"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Contenttemplate retrieved successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean"
+                    },
+                    "message": {
+                      "type": "string"
+                    },
+                    "data": {
+                      "$ref": "#/components/schemas/Contenttemplate"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Contenttemplate not found"
+          }
+        }
+      },
+      "patch": {
+        "tags": [
+          "Contenttemplate"
+        ],
+        "summary": "Update Contenttemplate",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Contenttemplate ID"
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/ContenttemplateUpdate"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Contenttemplate updated successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean"
+                    },
+                    "message": {
+                      "type": "string"
+                    },
+                    "data": {
+                      "$ref": "#/components/schemas/Contenttemplate"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Contenttemplate not found"
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "Contenttemplate"
+        ],
+        "summary": "Delete Contenttemplate",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "schema": {
+              "type": "string"
+            },
+            "description": "Contenttemplate ID"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Contenttemplate deleted successfully",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "success": {
+                      "type": "boolean"
+                    },
+                    "message": {
+                      "type": "string"
+                    },
+                    "data": {
+                      "$ref": "#/components/schemas/Contenttemplate"
+                    }
+                  }
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "Contenttemplate not found"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -1157,6 +1374,210 @@
             "type": "string",
             "format": "date-time",
             "description": "expiresAt field"
+          }
+        }
+      },
+      "StepsItem": {
+        "type": "object",
+        "properties": {
+          "_id": {
+            "type": "string",
+            "description": "MongoDB ObjectId"
+          },
+          "title": {
+            "type": "string",
+            "description": "title field"
+          },
+          "description": {
+            "type": "string",
+            "description": "description field"
+          },
+          "mediaType": {
+            "type": "string",
+            "description": "mediaType field"
+          },
+          "shotType": {
+            "type": "string",
+            "description": "shotType field"
+          },
+          "duration": {
+            "type": "number",
+            "description": "duration field"
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time",
+            "description": "Creation timestamp"
+          },
+          "updatedAt": {
+            "type": "string",
+            "format": "date-time",
+            "description": "Last update timestamp"
+          }
+        },
+        "required": [
+          "_id"
+        ]
+      },
+      "Contenttemplate": {
+        "type": "object",
+        "properties": {
+          "_id": {
+            "type": "string",
+            "description": "MongoDB ObjectId"
+          },
+          "title": {
+            "type": "string",
+            "description": "title field"
+          },
+          "description": {
+            "type": "string",
+            "description": "description field"
+          },
+          "type": {
+            "type": "string",
+            "description": "type field"
+          },
+          "category": {
+            "type": "string",
+            "description": "category field"
+          },
+          "thumbnail": {
+            "type": "string",
+            "description": "thumbnail field"
+          },
+          "steps": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/StepsItem"
+            },
+            "description": "Array of steps objects"
+          },
+          "hashtags": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "description": "Array of hashtags items"
+          },
+          "isActive": {
+            "type": "boolean",
+            "description": "isActive field"
+          },
+          "createdBy": {
+            "type": "string",
+            "description": "createdBy reference ID"
+          },
+          "createdAt": {
+            "type": "string",
+            "format": "date-time",
+            "description": "Creation timestamp"
+          },
+          "updatedAt": {
+            "type": "string",
+            "format": "date-time",
+            "description": "Last update timestamp"
+          }
+        },
+        "required": [
+          "_id",
+          "title"
+        ]
+      },
+      "ContenttemplateCreate": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string",
+            "description": "title field"
+          },
+          "description": {
+            "type": "string",
+            "description": "description field"
+          },
+          "type": {
+            "type": "string",
+            "description": "type field"
+          },
+          "category": {
+            "type": "string",
+            "description": "category field"
+          },
+          "thumbnail": {
+            "type": "string",
+            "description": "thumbnail field"
+          },
+          "steps": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/StepsItem"
+            },
+            "description": "Array of steps objects"
+          },
+          "hashtags": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "description": "Array of hashtags items"
+          },
+          "isActive": {
+            "type": "boolean",
+            "description": "isActive field"
+          },
+          "createdBy": {
+            "type": "string",
+            "description": "createdBy reference ID"
+          }
+        },
+        "required": [
+          "title"
+        ]
+      },
+      "ContenttemplateUpdate": {
+        "type": "object",
+        "properties": {
+          "title": {
+            "type": "string",
+            "description": "title field"
+          },
+          "description": {
+            "type": "string",
+            "description": "description field"
+          },
+          "type": {
+            "type": "string",
+            "description": "type field"
+          },
+          "category": {
+            "type": "string",
+            "description": "category field"
+          },
+          "thumbnail": {
+            "type": "string",
+            "description": "thumbnail field"
+          },
+          "steps": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/StepsItem"
+            },
+            "description": "Array of steps objects"
+          },
+          "hashtags": {
+            "type": "array",
+            "items": {
+              "type": "string"
+            },
+            "description": "Array of hashtags items"
+          },
+          "isActive": {
+            "type": "boolean",
+            "description": "isActive field"
+          },
+          "createdBy": {
+            "type": "string",
+            "description": "createdBy reference ID"
           }
         }
       }
